{
    "name": "TimeControles",
    "maps": [
        {
            "name": "Timer",
            "id": "34f3e68e-4ee2-4b32-8394-650dc594ccab",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f2d6ef5b-dafa-4100-9757-c5798433fc0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Time1",
                    "type": "Button",
                    "id": "00abc552-e8ec-4085-a038-a2c025bd9d9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Time2",
                    "type": "Button",
                    "id": "d4e39ad2-6257-4400-87f6-73ca0919b32d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Time3",
                    "type": "Button",
                    "id": "b590b1fa-35c4-4a1b-bc49-a5d007a73bb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseTime",
                    "type": "Button",
                    "id": "f2b0445e-e4ad-47c2-bf0e-c84496ed2c34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c2735d5c-82c0-4dc3-a639-6d2ede72cfcf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b5328ff-db5d-462b-b57b-5ce343687a15",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Time1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cdd2e5c-6c55-49a5-b105-2957adc500fc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Time2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b8a7bee-d723-45f6-96a9-4d397a2644c0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Time3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "NumPad",
                    "id": "5e7e095d-2615-4129-b7d9-4a0dfad4e503",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "c441113c-28ea-4c9a-a4ee-ff58ddcc2079",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "131ed97e-8abf-4476-bc83-14a069ee9941",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Test",
                    "id": "f0b2dec6-6edf-43c5-9641-cff2ac303b4e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "73ab77af-cb0e-49da-81d2-b6f4b2ce7699",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "f11016fe-944c-4092-b881-573205476c34",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}